--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,19 @@
-.App {
-  text-align: center;
+body {
   background-color: black;
 }
 
-div, img {
-  top:0;
-  left:0;
+.App {
+  text-align: center;
+  color: white;
+}
+
+content {
+  
 }
 
 img {
+  top:0;
+  left:0;
   -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
   mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
 }
